2006-06-17  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: Don't allow creation of string fields with width larger
	than 255 per http://bugzilla.maptools.org/show_bug.cgi?id=1434

2006-06-16  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: Don't treat decimals value as high order field length
	for strings, as it causes serious bugs in some cases such as
	http://bugzilla.remotesensing.org/show_bug.cgi?id=1202

	* dbfopen.c: Made static field buffer in DBFReadAttribute() into a
	field in the DBFInfo structure to avoid multi-threading problems.

2006-03-29  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: Fixed bug in DBFCloneEmpty() (treating pachFieldType as
	an array of int).

2006-02-08  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: Changed to put spaces into string fields that are NULL
	as per http://bugzilla.maptools.org/show_bug.cgi?id=316.

2006-01-26  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c, shapefil.h, shpdump.c: Added bMeasureIsUsed support as
	per http://bugzilla.maptools.org/show_bug.cgi?id=1249
	
2006-01-04  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c/shapefil.h: Added functions to check if dbf record is
	deleted, and to mark it as deleted.

2005-02-11  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c: Check panPartStart[0] is 0 in SHPCreateObject().

	* Fixed bug 305 in DBFCloneEmpty() - header length problem.

	* Make the pszStringField buffer for DBFReadAttribute() static char 
	[256] as per bug 306.

2004-09-15  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: treat all blanks as NULL in DBFIsAttributeNULL().

2004-06-23  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/shpsort.c: added new contribute program from Eric Miller.

2003-04-07  Frank Warmerdam  <warmerdam@pobox.com>

	* Issue 1.2.10 Release.

2003-03-10  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: modified DBFWriteAttribute call so that it returns FALSE
	if it has to truncate the input value.
